# java

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  copier.yaml  package.json  pyproject.toml
.ci/: commitlint.config.ts
.github/: dependabot.yml
.github/workflows/: auto-merge.yml
dependency-tracking/java/gradle/: libs.versions.toml
extensions/: dependency_context.py
includes/: kebab_case.jinja  upper_camel_case.jinja
project/: .editorconfig  LICENSE.jinja  README.md.jinja  build.gradle.kts.jinja  intellij-spaces-formatter-config-fields.diff  settings.gradle.kts.jinja
project/.config/: lombok.config.jinja
project/.config/checkstyle/: checkstyle.xml
project/.config/eclipse-formatter-compare/: Eclipse_Code_Formatter_Profile.xml  compare.sh  eclipse-code-formatter-profile.xml
project/gradle/: libs.versions.toml.jinja
project/src/main/java/: lombok.config.jinja  module-info.java.jinja  {% if use_lombok %}lombok.config{% endif %}.jinja
project/{% if repository_host == 'github' %}.github{% endif %}/: {% if update_bot == 'dependabot' %}dependabot.yaml{% endif %}.jinja
project/{% if repository_host == 'github' %}.github{% endif %}/workflows/: delta-coverage.yaml  {% if update_bot == 'dependabot' %}auto-approve.yaml{% endif %}.jinja
